# satellite-land-classification-cnn-vit

./: .env.example  .gitattributes  .gitignore  .replit  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  replit.md  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
attached_assets/: Pasted-You-are-working-inside-satellite-land-classification-cn_1777761024392.txt
configs/: data.yaml  integration.yaml  keras_cnn.yaml  keras_vit.yaml  pytorch_cnn.yaml  pytorch_vit.yaml
data/: README.md
docs/research_pack/: ACADEMIC_RESEARCH_BRIEF.md  CNN_VS_CNN_VIT_EXPLAINER.md  DATASET_AND_TASK_CARD.md  EXPERIMENT_LIMITATION_MATRIX.md  EXPLAINABILITY_PROTOCOL.md  METRIC_PROVENANCE_MATRIX.md  MODEL_COMPARISON_BRIEF.md  PROJECT_BRIEF_KAUST.md  README.md  REPRODUCIBILITY_CHECKLIST.md
models/: README.md
notebooks/: exploration.ipynb  module1_keras_data_loading.ipynb  module1_pytorch_data_loading.ipynb  module2_pytorch_cnn.ipynb  module4_cnn_vit_integration.ipynb
results/: README.md  classification_report.txt  metrics.json  model_comparison.csv
results/sample_predictions/: README.md
scripts/: run_evaluate.py  run_predict.py  run_prepare_data.py  run_train_keras_cnn.py  run_train_keras_vit.py  run_train_pytorch_cnn.py  run_train_pytorch_vit.py
source_notebooks/: Compare_Memory-Based_Versus_Generator-Based_Data_Loading.ipynb  Lab_M2L1_Train_and_Evaluate_a_Keras-Based_Classifier.ipynb  Lab_M2L3_Comparative_Analysis_of_Keras_and_PyTorch_Models (1).ipynb  Lab_M3L1_Vision_Transformers_in_Keras.ipynb  Lab_M3L2_Vision_Transformers_in_PyTorch.ipynb  README.md
src/satellite_land_classification/: __init__.py  augmentation.py  config.py  data.py  evaluate.py  features.py  integration.py  keras_cnn.py  keras_vit.py  predict.py  pytorch_cnn.py  pytorch_vit.py  utils.py  visualization.py
tests/: test_config.py  test_data.py  test_metric_provenance.py  test_pipeline.py  test_predict.py  test_research_pack_exists.py
tools/evidence/: README.md  validate_research_pack.py
